[package]
name = "media_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["multipart", "json", "stream"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
dotenv = "0.15.0"
